--- a/package.json
+++ b/package.json
@@ -35,5 +35,8 @@
     "last 3 ios_saf versions",
     "last 3 safari versions"
   ],
-  "type": "module"
+  "type": "module",
+  "dependencies": {
+    "dependencies": "^0.0.1"
+  }
 }
